--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -79,23 +79,25 @@ p {
 }
 .section-divider {
   margin-top: 48px;
+  position: absolute;
+  left: 50%;
+  text-align: center;
 }
 .section-divider .vl {
   border-left: 1px solid var(--gray);
   opacity: 0.4;
   height: 84px;
-  position: relative;
-  left: 50%;
 }
 
 .section-divider .numbered-circle {
   border: 1px solid var(--gray);
   opacity: 0.4;
   border-radius: 50px;
-  position: relative;
-  left: 43.5%;
   width: 56px;
   height: 56px;
   font-size: 16px;
   padding: 15px;
+
+  position: relative;
+  left: -50%;
 }
