--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -64,6 +64,8 @@ p {
   font-size: 0.75rem;
   color: var(--white);
   margin-bottom: 16px;
+  box-shadow: none;
+  border: none;
 }
 
 .button1 {
@@ -79,8 +81,8 @@ p {
 }
 .section-divider {
   margin-top: 48px;
-  margin-bottom: 64px;
-
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,15 +94,19 @@ p {
 }
 
 .section-divider .numbered-circle {
-  border: 1px solid var(--gray);
-  opacity: 0.4;
+  border: 1px solid rgb(135, 135, 157, 0.4);
+  color: rgb(135, 135, 157);
   border-radius: 50px;
   width: 56px;
   height: 56px;
   font-size: 16px;
   padding: 15px;
+  background-color: white;
 }
 
+.user-photos {
+  margin-top: 64px;
+}
 .user-photos img {
   width: 151px;
   height: 143px;
@@ -130,8 +136,21 @@ h2 {
   margin: 0px 37px 24px 37px;
 }
 
+.lastPart {
+  position: relative;
+}
+
 .footer {
+  padding-top: 92px;
   background-image: url("./assets/mobile/image-footer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 2000px 0 0 0 rgb(77, 150, 169, 0.8);
+  padding-bottom: 72px;
+  position: absolute;
+  top: 80%;
+  z-index: -1;
+  width: 100%;
 }
 .footer h2,
 .footer p {
@@ -141,7 +160,6 @@ h2 {
 
 .footer .button1 {
   background-color: var(--darkPurple);
-  background-repeat: no-repeat;
 }
 .footer span {
   color: var(--lightPurple);
