--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,9 @@ p {
 .button1,
 .button2 {
   border-radius: 29px;
-  padding: 16px 29px 16px 29px;
+  padding: 16px 10px 16px 10px;
   font-weight: 700;
-  font-size: 0.75rem;
+  font-size: 1rem;
   color: var(--white);
   margin-bottom: 16px;
   box-shadow: none;
@@ -125,13 +125,17 @@ p {
   margin-top: 50px;
   letter-spacing: 4px;
 }
-
+.second_section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 h2 {
   font-style: normal;
   font-weight: 900;
   font-size: 2rem;
   line-height: 2.25rem;
-  padding: 30px 45px 24px 45px;
+  padding: 30px 42.5px 24px 42.5px;
 }
 
 .features {
@@ -157,6 +161,9 @@ h2 {
   top: 80%;
   z-index: -1;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .footer h2,
 .footer p {
@@ -193,22 +200,23 @@ h2 {
   .button1 {
     margin-right: 16px;
   }
-  h2 {
-    padding: 30px 250px 24px 250px;
+
+  .second_section h2 {
+    width: 445px;
   }
 
   .features {
-    padding: 0px 125px 24px 125px;
+    width: 573px;
+    padding: 0px;
   }
-  .firstBreak {
-    display: none;
+
+  .footer h2 {
+    width: 445px;
+    padding-top: 0px;
   }
-  .secondBreak {
-    display: block;
-  }
+
   .footer p {
-    padding-left: 175px;
-    padding-right: 175px;
+    width: 573px;
     padding-bottom: 40px;
   }
 }
@@ -218,22 +226,21 @@ h2 {
     display: flex;
     justify-content: space-around;
   }
-
+  .second_section h2 {
+    width: 445px;
+  }
   .footer h2,
   .footer p {
     text-align: left;
-  }
-
-  .footer h2 {
-    width: 400px;
-    padding: 0px;
-    margin: 0px;
-  }
-  .footer p {
     width: 310px;
     margin: 0px;
     padding: 0px;
   }
+
+  .footer p {
+    line-height: 26px;
+  }
+
   .user-photos img {
     width: 255px;
     height: 242px;
