--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ h2 {
   color: var(--lightPurple);
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (max-width: 900px) {
   .users {
     width: auto;
     height: auto;
