--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,34 @@ h2 {
     width: auto;
     height: auto;
   }
+
+  .buttons {
+    flex-direction: row;
+  }
+
+  .button1 {
+    margin-right: 16px;
+  }
+  .firstpart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .bubbleImg {
+    justify-content: space-between;
+  }
+
+  .firstpart h1 {
+    font-size: 4rem;
+    line-height: 4rem;
+    width: 445px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .firstpart p {
+    width: 540px;
+  }
   .footer {
     display: flex;
     flex-direction: row;
